kubernetes/applications/okami-wiki/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okami-wiki
  labels:
    app: okami-wiki
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: okami-wiki
  replicas: 1
  template:
    metadata:
      labels:
        app: okami-wiki
    spec:
      containers:
        - name: okami-wiki
          image: ghcr.io/rekyuu/mediawiki-custom:1.36.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/var/www/html/LocalSettings.php"
              name: okami-wiki-config-mount
              subPath: LocalSettings.php
            - mountPath: "/var/www/html/resources/assets/logo.png"
              name: okami-wiki-volume-mount
              subPath: logo.png
            - mountPath: "/var/www/html/favicon.ico"
              name: okami-wiki-volume-mount
              subPath: favicon.ico
            - mountPath: "/var/www/html/images"
              name: okami-wiki-volume-mount
              subPath: images
      volumes:
        - name: okami-wiki-config-mount
          configMap:
            name: okami-wiki-config
        - name: okami-wiki-volume-mount
          persistentVolumeClaim:
            claimName: okami-wiki-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: okami-wiki
spec:
  type: ClusterIP
  selector:
    app: okami-wiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: okami-wiki
spec:
  routes:
    - kind: Rule
      match: Host(`okami.speedruns.wiki`)
      priority: 10
      services:
        - name: okami-wiki
          port: 80
